<resources>

    <!--    login fragment-->
    <string name="login_welcome">Welcome</string>
    <string name="login_usernamehint">Username</string>
    <string name="login_passwordhint">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_textlogin">Login</string>
    <string name="login_noacc">Don\'t have an account?</string>
    <string name="login_register">Register</string>
    <string name="login_skipAccount">I don\'t want to use account</string>

</resources>