<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="authViewModel"
            type="com.track.trackhabit.auth.presentation.ui.auth.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_login_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView_login_welcome"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="@dimen/margin_logintextinput_marginstart"
            android:layout_marginEnd="@dimen/margin_logintextinput_marginend">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={authViewModel.username}"
                android:textSize="@dimen/textsize_login_input"
                android:hint="@string/login_usernamehint"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_login_username"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/margin_logintextinput_marginstart"
            android:layout_marginEnd="@dimen/margin_logintextinput_marginend">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_login_input"
                android:text="@={authViewModel.password}"
                android:inputType="textPassword"
                android:hint="@string/login_passwordhint"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_login_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_textlogin"
            android:textColor="@color/white"
            android:background="@color/maincolor_orange"
            android:padding="6dp"
            android:textSize="@dimen/textsize_login_button"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="@dimen/margin_loginbutton_marginend"
            android:layout_marginStart="@dimen/margin_loginbutton_marginstart"
            android:layout_marginTop="@dimen/margin_loginbutton_margintop"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_login_password"
            app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_login_noAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_noacc"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:textSize="@dimen/textsize_login_register"
            android:layout_marginStart="6dp"
            app:layout_constraintBaseline_toBaselineOf="@id/textView_login_noAccount"
            app:layout_constraintStart_toEndOf="@id/textView_login_noAccount"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@color/black"
            android:elevation="3dp"
            android:visibility="@{authViewModel.progressBarVisibility}">

            <ProgressBar
                android:id="@+id/progressBar_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>